--- a/Domasna rabota 3/KinMKD/docker-compose.yml
+++ b/Domasna rabota 3/KinMKD/docker-compose.yml
@@ -7,11 +7,11 @@ services:
     environment:
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=admin
-      - POSTGRES_DB=KinMKD-DB
     ports:
       - '5433:5432'
     volumes:
       - db:/var/lib/postgres
+
   app:
     image: kinmkd
     depends_on:
@@ -22,11 +22,11 @@ services:
       - '6868:8080'
     environment:
       SPRING_APPLICATION_JSON: '{
-        "spring.datasource.url"  : "jdbc:postgresql:///postgres",
-        "spring.datasource.username" : "postgres",
-        "spring.datasource.password" : "admin",
-        "spring.jpa.properties.hibernate.dialect" : "org.hibernate.dialect.PostgreSQLDialect",
-        "spring.jpa.hibernate.ddl-auto" : "update"
+          "spring.datasource.url"  : "jdbc:postgresql://postgres:5432/postgres",
+          "spring.datasource.username" : "postgres",
+          "spring.datasource.password" : "admin",
+          "spring.jpa.properties.hibernate.dialect" : "org.hibernate.dialect.PostgreSQLDialect",
+          "spring.jpa.hibernate.ddl-auto" : "update"
       }'
     volumes:
       - .m2:/root/.m2
