Adding seed to database

--- a/Domasna rabota 3/KinMKD/src/main/resources/application-prod.properties
+++ b/Domasna rabota 3/KinMKD/src/main/resources/application-prod.properties
@@ -2,3 +2,6 @@ spring.datasource.url=jdbc:postgresql:///postgres
 spring.datasource.username=postgres
 spring.datasource.password=admin
 spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.hibernate.ddl-auto=update
+
+spring.flyway.locations=classpath:src/main/resources/static/locations.json
