--- a/Domasna rabota 4/location-service/src/main/resources/application.properties
+++ b/Domasna rabota 4/location-service/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 spring.application.name=location-service
 server.port=8081
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
+spring.profiles.active=prod
